# PAA-trabalho

./: .astyle.conf  .gitignore  CMakeLists.txt  LICENSE  README.md  especificacao.txt  ha  main  paa  paa2  paac  sudo-code  test.sm
data/: CL-100000-2d1-trial1.edges  SW-100-3-0d1-trial2.edges
data/in/: postfix.in  prefix.in
include/: AvlTree.hpp  BacktrackTree.h  Command.hpp  Graph.h  List.h  RCPSP.h  Util.hpp
src/: AvlTree.cpp  Command.cpp  Util.cpp  main.cpp
test-cases/: .~lock.RCPLIB (Parameters and BKS).xlsx#  bio-celegans.mtx  road-chesapeake.mtx  teste.txt  teste3.txt
test-cases/DIMACS/: C1000.9.mis  C125.9.mis  C2000.9.mis  C500.9.mis  DSJC1000.5.mis  DSJC500.5.mis  MANN_a45.mis  brock400_2.mis  brock400_4.mis  brock800_4.mis  gen200_p0.9_55.mis  gen400_p0.9_55.mis  gen400_p0.9_65.mis  hamming8-4.mis  p_hat1500-3.mis  p_hat300-1.mis  p_hat300-2.mis  p_hat700-1.mis  p_hat700-3.mis
test-cases/DIMACS graphs for MVC and MIS/: C250.9.mis  MANN_a27.mis  MANN_a81.mis  brock200_2.mis  brock200_4.mis  brock800_2.mis  gen200_p0.9_44.mis  gen400_p0.9_75.mis  hamming10-4.mis  hamming8-4.mis  keller4.mis  keller5.mis  p_hat300-3.mis  p_hat700-2.mis
test-cases/PAA/: j13_1.sm  j13_2.sm  j13_3.sm  j13_4.sm  j13_5.sm
test-cases/bio/: bio-diseasome.mtx  bio-dmela.mtx  bio-yeast.mtx
test-cases/ca/: ca-CSphd.mtx  ca-Erdos992.mtx  ca-GrQc.mtx  ca-netscience.mtx
test-cases/ia/: ia-fb-messages.mtx  ia-infect-dublin.mtx  ia-infect-hyper.mtx  ia-reality.mtx
test-cases/inf/: inf-power.mtx
test-cases/rt/: rt-retweet.mtx  rt-twitter-copen.mtx
(+26 files in other folders)
